src/main/java/com/example/antlr/sparksql/SparkSqlParser.java
// Generated from /Users/jiangdadong/CodeBuddy/antlr-demo01/src/main/antlr4/sparksql/SparkSqlParser.g4 by ANTLR 4.13.1
package com.example.antlr.sparksql;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SparkSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, AND=4, OR=5, NOT=6, INSERT=7, INTO=8, VALUES=9, 
		UPDATE=10, SET=11, DELETE=12, CREATE=13, TABLE=14, DROP=15, ALTER=16, 
		ADD=17, COLUMN=18, COLUMNS=19, INDEX=20, PRIMARY=21, KEY=22, UNIQUE=23, 
		NULL_=24, DEFAULT=25, IF_=26, EXISTS=27, DATABASE=28, SCHEMA=29, ORDER=30, 
		BY=31, GROUP=32, HAVING=33, LIMIT=34, OFFSET=35, JOIN=36, INNER=37, LEFT=38, 
		RIGHT=39, OUTER=40, CROSS=41, FULL=42, SEMI=43, ANTI=44, ON=45, AS=46, 
		IN=47, BETWEEN=48, LIKE=49, RLIKE=50, REGEXP=51, IS=52, DISTINCT=53, UNION=54, 
		INTERSECT=55, EXCEPT=56, ALL=57, CASE=58, WHEN=59, THEN=60, ELSE=61, END=62, 
		ASC=63, DESC=64, WITH=65, RECURSIVE=66, TRUE=67, FALSE=68, COUNT=69, SUM=70, 
		AVG=71, MIN=72, MAX=73, CAST=74, COALESCE=75, USE_=76, SHOW=77, DATABASES=78, 
		SCHEMAS=79, TABLES=80, VIEWS=81, FUNCTIONS=82, DESCRIBE=83, EXTENDED=84, 
		FORMATTED=85, VIEW=86, TEMPORARY=87, GLOBAL=88, EXTERNAL=89, LOCATION=90, 
		STORED=91, ROW=92, FORMAT=93, DELIMITED=94, FIELDS=95, TERMINATED=96, 
		LINES=97, TBLPROPERTIES=98, SERDEPROPERTIES=99, SERDE=100, USING=101, 
		OPTIONS=102, PARTITIONED=103, PARTITION=104, CLUSTERED=105, SORTED=106, 
		BUCKETS=107, OVERWRITE=108, DIRECTORY=109, LOCAL=110, LATERAL=111, WINDOW=112, 
		OVER=113, ROWS=114, RANGE=115, UNBOUNDED=116, PRECEDING=117, FOLLOWING=118, 
		CURRENT=119, PIVOT=120, UNPIVOT=121, FOR=122, TABLESAMPLE=123, PERCENT=124, 
		DISTRIBUTE=125, SORT=126, CLUSTER=127, EXPLAIN=128, CACHE=129, UNCACHE=130, 
		LAZY=131, REFRESH=132, MSCK=133, REPAIR=134, RECOVER=135, PARTITIONS=136, 
		MAP=137, STRUCT=138, ARRAY=139, COMMENT=140, RENAME=141, TO=142, REPLACE=143, 
		CASCADE=144, RESTRICT=145, TINYINT=146, SMALLINT=147, INT=148, INTEGER=149, 
		BIGINT=150, FLOAT=151, DOUBLE=152, DECIMAL=153, DEC=154, NUMERIC=155, 
		STRING=156, CHAR=157, VARCHAR=158, BINARY=159, BOOLEAN=160, DATE=161, 
		TIMESTAMP=162, INTERVAL=163, STAR=164, COMMA=165, DOT=166, LPAREN=167, 
		RPAREN=168, LBRACKET=169, RBRACKET=170, SEMICOLON=171, EQ=172, NEQ=173, 
		LT=174, GT=175, LTE=176, GTE=177, PLUS=178, MINUS=179, DIVIDE=180, MOD=181, 
		AMPERSAND=182, PIPE=183, CARET=184, TILDE=185, CONCAT=186, COLON=187, 
		BACKTICK=188, INTEGER_LITERAL=189, DECIMAL_LITERAL=190, STRING_LITERAL=191, 
		BACKTICK_QUOTED_ID=192, IDENTIFIER=193, WS=194, LINE_COMMENT=195, BLOCK_COMMENT=196;
	public static final int
		RULE_root = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_ddlStatement = 3, 
		RULE_createDatabase = 4, RULE_dropDatabase = 5, RULE_createTable = 6, 
		RULE_dropTable = 7, RULE_alterTable = 8, RULE_createView = 9, RULE_dropView = 10, 
		RULE_dmlStatement = 11, RULE_withClause = 12, RULE_cteDefinition = 13, 
		RULE_selectStatement = 14, RULE_insertStatement = 15, RULE_utilityStatement = 16, 
		RULE_useStatement = 17, RULE_showStatement = 18, RULE_describeStatement = 19, 
		RULE_explainStatement = 20, RULE_cacheStatement = 21, RULE_uncacheStatement = 22, 
		RULE_refreshStatement = 23, RULE_selectElements = 24, RULE_selectElement = 25, 
		RULE_tableSource = 26, RULE_tableSample = 27, RULE_joinClause = 28, RULE_joinType = 29, 
		RULE_lateralViewClause = 30, RULE_whereClause = 31, RULE_groupByClause = 32, 
		RULE_havingClause = 33, RULE_orderByClause = 34, RULE_sortByClause = 35, 
		RULE_distributeByClause = 36, RULE_clusterByClause = 37, RULE_orderByElement = 38, 
		RULE_limitClause = 39, RULE_windowClause = 40, RULE_namedWindow = 41, 
		RULE_windowSpec = 42, RULE_windowFrame = 43, RULE_frameBound = 44, RULE_expression = 45, 
		RULE_structExpression = 46, RULE_arrayExpression = 47, RULE_mapExpression = 48, 
		RULE_namedExpression = 49, RULE_comparisonOperator = 50, RULE_caseExpression = 51, 
		RULE_functionCall = 52, RULE_functionName = 53, RULE_columnDefinition = 54, 
		RULE_dataType = 55, RULE_structField = 56, RULE_partitionSpec = 57, RULE_partitionVal = 58, 
		RULE_partitionColumnList = 59, RULE_sortColumnList = 60, RULE_propertyList = 61, 
		RULE_property = 62, RULE_dataSourceFormat = 63, RULE_rowFormat = 64, RULE_columnNameList = 65, 
		RULE_expressionList = 66, RULE_columnRef = 67, RULE_tableName = 68, RULE_databaseName = 69, 
		RULE_viewName = 70, RULE_columnName = 71, RULE_indexName = 72, RULE_cteName = 73, 
		RULE_alias = 74, RULE_identifier = 75, RULE_literal = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "sqlStatements", "sqlStatement", "ddlStatement", "createDatabase", 
			"dropDatabase", "createTable", "dropTable", "alterTable", "createView", 
			"dropView", "dmlStatement", "withClause", "cteDefinition", "selectStatement", 
			"insertStatement", "utilityStatement", "useStatement", "showStatement", 
			"describeStatement", "explainStatement", "cacheStatement", "uncacheStatement", 
			"refreshStatement", "selectElements", "selectElement", "tableSource", 
			"tableSample", "joinClause", "joinType", "lateralViewClause", "whereClause", 
			"groupByClause", "havingClause", "orderByClause", "sortByClause", "distributeByClause", 
			"clusterByClause", "orderByElement", "limitClause", "windowClause", "namedWindow", 
			"windowSpec", "windowFrame", "frameBound", "expression", "structExpression", 
			"arrayExpression", "mapExpression", "namedExpression", "comparisonOperator", 
			"caseExpression", "functionCall", "functionName", "columnDefinition", 
			"dataType", "structField", "partitionSpec", "partitionVal", "partitionColumnList", 
			"sortColumnList", "propertyList", "property", "dataSourceFormat", "rowFormat", 
			"columnNameList", "expressionList", "columnRef", "tableName", "databaseName", 
			"viewName", "columnName", "indexName", "cteName", "alias", "identifier", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'*'", "','", "'.'", 
			"'('", "')'", "'['", "']'", "';'", null, null, "'<'", "'>'", "'<='", 
			"'>='", "'+'", "'-'", "'/'", "'%'", "'&'", "'|'", "'^'", "'~'", "'||'", 
			"':'", "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECT", "FROM", "WHERE", "AND", "OR", "NOT", "INSERT", "INTO", 
			"VALUES", "UPDATE", "SET", "DELETE", "CREATE", "TABLE", "DROP", "ALTER", 
			"ADD", "COLUMN", "COLUMNS", "INDEX", "PRIMARY", "KEY", "UNIQUE", "NULL_", 
			"DEFAULT", "IF_", "EXISTS", "DATABASE", "SCHEMA", "ORDER", "BY", "GROUP", 
			"HAVING", "LIMIT", "OFFSET", "JOIN", "INNER", "LEFT", "RIGHT", "OUTER", 
			"CROSS", "FULL", "SEMI", "ANTI", "ON", "AS", "IN", "BETWEEN", "LIKE", 
			"RLIKE", "REGEXP", "IS", "DISTINCT", "UNION", "INTERSECT", "EXCEPT", 
			"ALL", "CASE", "WHEN", "THEN", "ELSE", "END", "ASC", "DESC", "WITH", 
			"RECURSIVE", "TRUE", "FALSE", "COUNT", "SUM", "AVG", "MIN", "MAX", "CAST", 
			"COALESCE", "USE_", "SHOW", "DATABASES", "SCHEMAS", "TABLES", "VIEWS", 
			"FUNCTIONS", "DESCRIBE", "EXTENDED", "FORMATTED", "VIEW", "TEMPORARY", 
			"GLOBAL", "EXTERNAL", "LOCATION", "STORED", "ROW", "FORMAT", "DELIMITED", 
			"FIELDS", "TERMINATED", "LINES", "TBLPROPERTIES", "SERDEPROPERTIES", 
			"SERDE", "USING", "OPTIONS", "PARTITIONED", "PARTITION", "CLUSTERED", 
			"SORTED", "BUCKETS", "OVERWRITE", "DIRECTORY", "LOCAL", "LATERAL", "WINDOW", 
			"OVER", "ROWS", "RANGE", "UNBOUNDED", "PRECEDING", "FOLLOWING", "CURRENT", 
			"PIVOT", "UNPIVOT", "FOR", "TABLESAMPLE", "PERCENT", "DISTRIBUTE", "SORT", 
			"CLUSTER", "EXPLAIN", "CACHE", "UNCACHE", "LAZY", "REFRESH", "MSCK", 
			"REPAIR", "RECOVER", "PARTITIONS", "MAP", "STRUCT", "ARRAY", "COMMENT", 
			"RENAME", "TO", "REPLACE", "CASCADE", "RESTRICT", "TINYINT", "SMALLINT", 
			"INT", "INTEGER", "BIGINT", "FLOAT", "DOUBLE", "DECIMAL", "DEC", "NUMERIC", 
			"STRING", "CHAR", "VARCHAR", "BINARY", "BOOLEAN", "DATE", "TIMESTAMP", 
			"INTERVAL", "STAR", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"SEMICOLON", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "PLUS", "MINUS", 
			"DIVIDE", "MOD", "AMPERSAND", "PIPE", "CARET", "TILDE", "CONCAT", "COLON", 
			"BACKTICK", "INTEGER_LITERAL", "DECIMAL_LITERAL", "STRING_LITERAL", "BACKTICK_QUOTED_ID", 
			"IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SparkSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SparkSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SparkSqlParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSqlParserVisitor ) return ((SparkSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			sqlStatements();
			setState(155);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(SparkSqlParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SparkSqlParser.SEMICOLON, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSqlParserVisitor ) return ((SparkSqlParserVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 106626L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 536579L) != 0) || ((((_la - 128)) & ~0x3f) == 0 && ((1L << (_la - 128)) & 23L) != 0)) {
				{
				{
				setState(157);
				sqlStatement();
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(158);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public DdlStatementContext ddlStatement() {
			return getRuleContext(DdlStatementContext.class,0);
		}
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public UtilityStatementContext utilityStatement() {
			return getRuleContext(UtilityStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSqlParserListener ) ((SparkSqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSqlParserVisitor ) return ((SparkSqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
			case DROP:
			case ALTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				ddlStatement();
				}
				break;
			case SELECT:
			case INSERT:
			case WITH:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				dmlStatement();
				}
				break;
			case DESC:
			case USE_:
			case SHOW:
			case DESCRIBE:
			case EXPLAIN:
			case CACHE:
			case UNCACHE:
			case REFRESH:
				enterOuterAlt(_localctx, 3);
				{
				setState(168);
				utilityStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
